# recskit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: ledger.csv  parse_pdf_statement.py  reconcile_csv.py  reconcile_sage.py  statement.csv
recskit/: __init__.py  due_dates.py  matching.py  models.py  pdf_statement.py  reconcile.py  sage_adapter.py
tests/: conftest.py  test_due_dates.py  test_matching.py  test_pdf_statement.py  test_reconcile.py  test_sage_adapter.py
